# cennznet

./: .gitignore  Cargo.toml  docker-compose.yml  localRaw.json
.circleci/: config.yml
cli/: Cargo.toml
crml/cennzx-spot/: Cargo.toml
crml/cennzx-spot/src/: impls.rs  lib.rs
crml/rewards/: Cargo.toml
crml/sylo/: Cargo.toml
crml/sylo/src/: e2ee.rs
crml/transaction-payment/: Cargo.toml
crml/transaction-payment/src/: lib.rs  mock.rs
executor/: Cargo.toml
genesis/: Readme.md  rimu-latest.json  rimuLatestRaw.json  testnet.sh
primitives/: Cargo.toml
primitives/src/: cennznet_extrinsic.rs  doughnut.rs  traits.rs
prml/attestation/: Cargo.toml
prml/fees/: Cargo.toml
prml/generic-asset/: Cargo.toml
rpc/: Cargo.toml
rpc-client/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: doughnut.rs  impls.rs  lib.rs
src/: service.rs
testing/: Cargo.toml
