[package]
name = "cennznet"
version = "0.9.25-beta"
authors = ["Centrality Developers <support@centrality.ai>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "cennznet"
path = "src/main.rs"

[dependencies]
error-chain = "0.12"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1.7"
exit-future = "0.1"
hex-literal = "0.2"
slog = "^2"
app_dirs = "1.2"
parity-codec = { version = "3.5.4" }
trie-root = { git = "https://github.com/paritytech/trie" }
sr-io = { git = "https://github.com/cennznet/plug-blockchain", branch = "master-hotfix" }
sr-primitives = { git = "https://github.com/cennznet/plug-blockchain", branch = "master-hotfix" }
substrate-cli = { git = "https://github.com/cennznet/plug-blockchain", branch = "master-hotfix" }
substrate-primitives = { git = "https://github.com/cennznet/plug-blockchain", branch = "master-hotfix" }
substrate-executor = { git = "https://github.com/cennznet/plug-blockchain", branch = "master-hotfix" }
substrate-service = { git = "https://github.com/cennznet/plug-blockchain", branch = "master-hotfix" }
substrate-transaction-pool = { git = "https://github.com/cennznet/plug-blockchain", branch = "master-hotfix" }
substrate-network = { git = "https://github.com/cennznet/plug-blockchain", branch = "master-hotfix" }
substrate-consensus-aura = { git = "https://github.com/cennznet/plug-blockchain", branch = "master-hotfix" }
substrate-keystore = { git = "https://github.com/cennznet/plug-blockchain", branch = "master-hotfix" }
substrate-client = { git = "https://github.com/cennznet/plug-blockchain", branch = "master-hotfix", default-features = false }
substrate-consensus-common = { git = "https://github.com/cennznet/plug-blockchain", branch = "master-hotfix" }
substrate-finality-grandpa = { git = "https://github.com/cennznet/plug-blockchain", branch = "master-hotfix" }
substrate-basic-authorship = { git = "https://github.com/cennznet/plug-blockchain", branch = "master-hotfix" }
substrate-inherents = { git = "https://github.com/cennznet/plug-blockchain", branch = "master-hotfix" }
substrate-telemetry = { git = "https://github.com/cennznet/plug-blockchain", branch = "master-hotfix" }
srml-grandpa = { git = "https://github.com/cennznet/plug-blockchain", branch = "master-hotfix" }
structopt = "0.2.13"
cennznet-runtime = { path = "runtime" }
cennznet-primitives = { path = "primitives" }
generic-asset = { package = "prml-generic-asset", path = "prml/generic-asset" }
fees = { package = "prml-fees", path = "prml/fees" }

[build-dependencies]
vergen = "2"

[workspace]
members = [ "runtime", "primitives", "crml/*", "prml/*" ]
exclude = [ "runtime/wasm" ]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
