[package]
name = "cennznet-primitives"
version = "0.1.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"

[dependencies]
runtime-io = { package = "sr-io", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }
parity-codec = { version = "3.5.4", default-features = false, features = ["derive"] }

primitives = { package = "substrate-primitives", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
rstd = { package = "sr-std", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
runtime_primitives = { package = "sr-primitives", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
support = { package="srml-support", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"primitives/std",
	"runtime-io/std",
	"rstd/std",
	"runtime_primitives/std",
	"serde_derive",
	"serde/std",
	"support/std",
]
