[package]
name = "cennznet-runtime"
version = "0.9.25-beta"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"

[dependencies]
integer-sqrt = { version = "0.1.2" }
safe-mix = { version = "1.0", default-features = false }
parity-codec = { version = "3.5.4", default-features = false, features = ["derive"] }
primitives = { package = "substrate-primitives", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
substrate-client = { rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
rstd = { package = "sr-std", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
runtime-primitives = { package = "sr-primitives", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
offchain-primitives = { package = "substrate-offchain-primitives", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
consensus_authorities = { package = "substrate-consensus-authorities", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
version = { package = "sr-version", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
support = { package = "srml-support", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
aura = { package = "srml-aura", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
consensus = { package = "srml-consensus", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
contract = { package= "srml-contract", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
council = { package = "srml-council", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
democracy = { package = "srml-democracy", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
executive = { package = "srml-executive", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
grandpa = { package = "srml-grandpa", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
indices = { package = "srml-indices", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
session = { package = "srml-session", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
staking = { package = "srml-staking", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
system = { package = "srml-system", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
timestamp = { package = "srml-timestamp", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
sudo = { package = "srml-sudo", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
consensus_aura = { package = "substrate-consensus-aura-primitives", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
rustc-hex = { version = "2.0", optional = true }
hex-literal = { version = "0.2", optional = true }
serde = { version = "1.0", optional = true }
substrate-keyring = {rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", optional = true }
cennznet-primitives = { path = "../primitives", default-features = false }
rewards = { package = "crml-rewards", path = "../crml/rewards", default-features = false }
generic-asset = { package = "prml-generic-asset", path = "../prml/generic-asset", default-features = false }
fees = { package = "prml-fees", path = "../prml/fees", default-features = false }
attestation = { package = "prml-attestation", path = "../prml/attestation", default-features = false }
sylo = { package = "crml-sylo", path = "../crml/sylo", default-features = false }
cennzx-spot = { package = "crml-cennzx-spot", path = "../crml/cennzx-spot", default-features = false }
cennznut = { git = "https://github.com/cennznet/cennznut-rs", tag = "v0.1.1", default-features = false }

[dev-dependencies]
runtime-io = { package = "sr-io", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain" }

[features]
default = ["std"]
core = [
	"contract/core",
]
std = [
	"parity-codec/std",
	"primitives/std",
	"rstd/std",
	"runtime-primitives/std",
	"support/std",
	"aura/std",
	"consensus/std",
	"contract/std",
	"council/std",
	"democracy/std",
	"executive/std",
	"grandpa/std",
	"indices/std",
	"session/std",
	"staking/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"version/std",
	"cennznet-primitives/std",
	"serde/std",
	"safe-mix/std",
	"substrate-client/std",
	"consensus_aura/std",
	"rustc-hex",
	"hex-literal",
	"serde",
	"substrate-keyring",
	"offchain-primitives/std",
	"consensus_authorities/std",
	"attestation/std",
	"cennzx-spot/std",
	"sylo/std",
	"generic-asset/std",
	"fees/std",
	"rewards/std",
	"cennznut/std",
]
