[package]
name = "crml-cennzx-spot"
version = "0.1.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"

[dependencies]
cennznet-primitives = { path = "../../primitives", default-features = false }
fees = { package="prml-fees", path = "../../prml/fees", default-features = false }
serde = { version = "1.0", optional = true }
parity-codec = { version = "3.5.4", default-features = false, features = ["derive"] }
primitives = { package = "substrate-primitives", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
rstd = { package="sr-std", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
runtime_io = { package="sr-io", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
runtime_primitives = { package="sr-primitives", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
srml-support = { package="srml-support", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
system = { package="srml-system", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
generic-asset = { package="prml-generic-asset", path = "../../prml/generic-asset", default-features = false }
uint = { version = "0.7.1", default-features = false }

[features]
default = ["std"]
std = [
	"cennznet-primitives/std",
	"fees/std",
	"serde",
	"parity-codec/std",
	"primitives/std",
	"runtime_primitives/std",
	"runtime_io/std",
	"rstd/std",
	"srml-support/std",
	"system/std",
	"generic-asset/std",
]
