[package]
name = "crml-rewards"
version = "0.1.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false }
parity-codec = { version = "3.5.4", default-features = false, features = ["derive"] }
rstd = { package="sr-std", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
runtime_io = { package="sr-io", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
runtime_primitives = { package="sr-primitives", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
primitives = { package = "substrate-primitives", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
support = { package="srml-support", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
system = { package="srml-system", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
staking = { package = "srml-staking", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
session = { package = "srml-session", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
fees = { package = "prml-fees", path = "../../prml/fees", default-features = false }

[dev-dependencies]
generic-asset = { package = "prml-generic-asset", path = "../../prml/generic-asset", default-features = false }
timestamp = { package = "srml-timestamp", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
consensus = { package = "srml-consensus", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }

[features]
default = ["std"]
std =[
	"serde/std",
	"parity-codec/std",
	"runtime_primitives/std",
	"primitives/std",
	"runtime_io/std",
	"rstd/std",
	"support/std",
	"system/std",
	"staking/std",
	"session/std",
	"fees/std",
]
