[package]
name = "crml-sylo"
version = "0.1.0"
authors = ["Centrality Developers <support@centrality.ai>"]

[dependencies]
serde = { version = "1.0", default-features = false }
parity-codec = { version = "3.5.4", default-features = false, features = ["derive"] }
primitives = { package = "substrate-primitives", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
sr-std = { rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
sr-io = { rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
runtime-primitives = { package = "sr-primitives", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
srml-support = { rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
srml-system = { rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
srml-balances = { rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }

[dev-dependencies]
primitives = { package = "substrate-primitives", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
sr-io = { rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
runtime-primitives = { package = "sr-primitives", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"primitives/std",
	"sr-std/std",
	"sr-io/std",
	"runtime-primitives/std",
	"srml-support/std",
	"srml-system/std",
	"srml-balances/std",
]
