[package]
name = "prml-attestation"
version = "0.1.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"

[dependencies]
parity-codec = { version = "3.5.4", default-features = false, features = ["derive"] }
primitives = { package = "substrate-primitives", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
runtime-primitives = { package = "sr-primitives", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
sr-std = { rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
sr-io = { rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
srml-support = { rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
srml-system = { rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"primitives/std",
	"runtime-primitives/std",
	"sr-std/std",
	"sr-io/std",
	"srml-support/std",
	"srml-system/std",
]
