[package]
name = "prml-fees"
version = "0.1.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
parity-codec = { version = "3.5.4", default-features = false }
primitives = { package = "substrate-primitives", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
rstd = { package="sr-std", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
runtime_io = { package="sr-io", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
runtime_primitives = { package="sr-primitives", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
support = { package="srml-support", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }
system = { package="srml-system", rev = "ca14f9e6ac38dbf4614c5d0dac751d9a1888539d", git = "https://github.com/cennznet/plug-blockchain", default-features = false }

[dev-dependencies]
generic-asset = { package="prml-generic-asset", path = "../generic-asset" }

[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
	"primitives/std",
	"rstd/std",
	"runtime_io/std",
	"runtime_primitives/std",
	"support/std",
	"system/std",
]
